- Moved gameBoard to game session pages - Fixed player addBalance API (hidden for testing) - Re-added voice and text chat to comms panel (styling fix pending) - Attempted fix for username wrapping issue - Imported Property type to resolve Not Found errors

--- a/frontend/components/game/PlayerStats/PlayerStats.css
+++ b/frontend/components/game/PlayerStats/PlayerStats.css
@@ -40,6 +40,7 @@
     0% {
         background-color: transparent;
     }
+
     100% {
         background-color: var(--background-darker);
     }
@@ -73,19 +74,18 @@
     width: fit-content;
 }
 
-.player-name-status > span {
-    vertical-align: middle;
-    display: inline-flex;
-}
-
 .player-name {
+    /* vertical-align: middle; */
+    display: inline-block;
+    width: 100%;
+
     /* handle overflow if username is too long for container*/
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-
-    /* border: 2px solid green;
-    background-color: lightgreen; */
+    
+    border: 2px solid green;
+    background-color: lightgreen;
 }
 
 .player-stats.is-turn .player-name {
